fix for problem in safari,  the fixed-header is not perfectly aligned with column but the table generation code needs a rewrite to make this better.  Current configuration lines up well with operational machines,  linux firefox
git-svn-id: http://chara.hi.gemini.edu/svn/DRSoftware/gemini_python/trunk@5498 e04282df-fb77-4b70-bf7a-c1223586725c

--- a/recipe_system/adcc/client/adcc_faceplate/css/nighttime_metrics.css
+++ b/recipe_system/adcc/client/adcc_faceplate/css/nighttime_metrics.css
@@ -17,7 +17,7 @@ body {
     clear: both;
     height: 40px;
     padding: 0px;
-    width: 1036px;
+    width: 1024px;
     position: relative;
 }
 #message_box {
@@ -36,7 +36,7 @@ body {
     box-shadow: 0 0 4px 4px #CE0000;
     display: none;
     height: 40px;
-    width: 1036px;
+    width: 1024px;
     padding: 0px;
     z-index: 0;
 }
@@ -46,7 +46,7 @@ body {
     box-shadow: 0 0 4px 4px #FF9E00;
     display: none;
     height: 40px;
-    width: 1036px;
+    width: 1024px;
     padding: 0px;
     z-index: 0;
 }
@@ -61,7 +61,7 @@ body {
     clear: both;
     height: 340px;
     overflow: hidden;
-    width: 1036px;
+    width: 1024px;
 }
 
 thead.fixed_header tr {
@@ -165,7 +165,7 @@ th.ui-droppable.hover {
     clear: both;
     height: 340px;
     padding: 10px 0px 0px 0px;
-    width: 1036px;
+    width: 1024px;
 }
 
 #iqplot {
@@ -199,7 +199,7 @@ canvas.jqplot-xaxis-label {
  to zoom out*/
 div.jqplot-target div::selection, div.jqplot-target canvas::selection, div.jqplot-axis jqplot-yaxis canvas::selection, div.jqplot-axis jqplot-xaxis canvas::selection {
     background: rgba(0, 0, 0, 0);
-} 
+}
 div.jqplot-target div::-moz-selection, div.jqplot-target canvas::-moz-selection, div.jqplot-axis jqplot-yaxis canvas::-moz-selection, div.jqplot-axis jqplot-xaxis canvas::-moz-selection {
     background: rgba(0, 0, 0, 0);
 }
@@ -236,7 +236,7 @@ td.jqplot-series-hidden div.jqplot-table-legend-swatch {
     height: 32px;
     margin: 0px;
     padding: 0px;
-    width: 1036px;
+    width: 1024px;
     position: relative;
 }
 #controls {
@@ -246,7 +246,7 @@ td.jqplot-series-hidden div.jqplot-table-legend-swatch {
     position: absolute;
 }
 #controls li {
-    background-color: white;    
+    background-color: white;
     border: 1px solid #888;
     border-radius: 6px;
     -moz-box-shadow: 1px 1px 1px #888;
